# ChangeLog for net-nntp/pan
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/net-nntp/cvs-repo/gentoo-x86/net-nntp/pan/ChangeLog,v 1.27 2006/10/22 14:26:00 swegener Exp $

*pan-0.117 (22 Oct 2006)

  22 Oct 2006; Sven Wegener <swegener@gentoo.org> +pan-0.117.ebuild:
  Version bump.

*pan-0.116 (10 Oct 2006)

  10 Oct 2006; Sven Wegener <swegener@gentoo.org> -files/0.115-size_t.patch,
  -pan-0.115.ebuild, +pan-0.116.ebuild:
  Version bump.

  09 Oct 2006; Sven Wegener <swegener@gentoo.org> +files/0.115-size_t.patch,
  pan-0.115.ebuild:
  Add patch to fix bug #149865.

  06 Oct 2006; Sven Wegener <swegener@gentoo.org> -pan-0.107.ebuild,
  -pan-0.109.ebuild, -pan-0.111.ebuild, -pan-0.112.ebuild,
  -pan-0.113.ebuild, -pan-0.114.ebuild:
  Cleanup.

*pan-0.115 (01 Oct 2006)

  01 Oct 2006; Sven Wegener <swegener@gentoo.org> +pan-0.115.ebuild:
  Version bump.

*pan-0.114 (26 Sep 2006)

  26 Sep 2006; Sven Wegener <swegener@gentoo.org> +pan-0.114.ebuild:
  Version bump.

*pan-0.113 (25 Sep 2006)

  25 Sep 2006; Sven Wegener <swegener@gentoo.org> +pan-0.113.ebuild:
  Version bump.

*pan-0.112 (10 Sep 2006)

  10 Sep 2006; Sven Wegener <swegener@gentoo.org> +pan-0.112.ebuild:
  Version bump.

*pan-0.111 (05 Sep 2006)

  05 Sep 2006; Sven Wegener <swegener@gentoo.org> +pan-0.111.ebuild:
  Version bump.

  03 Sep 2006; Chris Gianelloni <wolf31o2@gentoo.org> pan-0.14.2.ebuild:
  Added eutils to inherit for bug #139655.

*pan-0.109 (19 Aug 2006)

  19 Aug 2006; Sven Wegener <swegener@gentoo.org> +pan-0.109.ebuild:
  Version bump.

  13 Aug 2006; Markus Rothe <corsair@gentoo.org> pan-0.107.ebuild:
  Added ~ppc64; bug #142589

  09 Aug 2006; Sven Wegener <swegener@gentoo.org> pan-0.14.2.ebuild:
  Add the gcc-4 patch to 0.14.2, bug #139656.

*pan-0.107 (09 Aug 2006)

  09 Aug 2006; Sven Wegener <swegener@gentoo.org> -pan-0.106.ebuild,
  +pan-0.107.ebuild:
  Version bump.

*pan-0.106 (02 Aug 2006)
