@@ -11,6 +11,7 @@ RMD160 cca70799a8507af85b2c60857bade4618f7fa75d files/pan-0.14.2.91-gcc4-2.patch
 SHA256 fd2ecb4b72c8046d30ef9dec43c088d5d346690c332a7b7dd9b66076b3ff7538 files/pan-0.14.2.91-gcc4-2.patch 698
 DIST pan-0.116.tar.bz2 1402968 RMD160 9559c1d141a4e7ee6625fd93112eb7570a359d5d SHA1 549b6b4d1d8198701e5218b22afc6e53ced8564a SHA256 77965bcceff35ae591ee477ac3229d22eb5998687cd8f1f6eb95b8abc0ce760b
 DIST pan-0.117.tar.bz2 1407161 RMD160 477e0212971d5c688085fa310e8f0b0282e3b413 SHA1 b97cbe4c1fddc5ca7c88d877588e10c0111a6389 SHA256 cff7060c18ecbb5d910c7bd2bfa97beec4f0c7891b86c138407ec3c1c2178888
+DIST pan-0.118.tar.bz2 1408563 RMD160 c4b8d23a84476993c911e7c1ee3376a393bc718b SHA1 5f55b519603f5f9d44beb52d1be675183c833472 SHA256 cc37ad98f35ba380c55e36f4e436ec590aee485c3c310898377bef989efd4b12
 DIST pan-0.14.2.91.tar.bz2 1919099 RMD160 372012f9f23ef1654125977ff4dee193021fb733 SHA1 1a321bd7425350a1991e6802b05bcea8b744f923 SHA256 1658c22fbe29ac0b88d2ae8e487247bad40618809719819297ecf0b7ae69a9ab
 DIST pan-0.14.2.tar.bz2 1834784 RMD160 0dff24b1d83b6fabfb9cc38a7dea5f9e99513009 SHA1 39c0128906d389524e24d55691e017cf509516a0 SHA256 d864907d3179cde5bdd7afa02c8a2bd00f1d23ce6053f704f64e7814c7f6aba4
 EBUILD pan-0.116.ebuild 936 RMD160 a55d8aa552086ee8a86c0ec34dac9c50513d2b93 SHA1 37aefd9e2f1d7b77acd13b22a01f4242da0eccc4 SHA256 2662f6ebafe73564edf0504f21f6d2557650242bf6d25d1634ece99eb9be421d
@@ -21,6 +22,10 @@ EBUILD pan-0.117.ebuild 936 RMD160 89ccf6fd54a51ff397494258437e00fcfa81f05c SHA1
 MD5 345476d698060716620bce5a6d6fd0ff pan-0.117.ebuild 936
 RMD160 89ccf6fd54a51ff397494258437e00fcfa81f05c pan-0.117.ebuild 936
 SHA256 e95e26aa00cf8edc938551f9842f4c6288768f87d1ca69557086c260c47f120b pan-0.117.ebuild 936
+EBUILD pan-0.118.ebuild 936 RMD160 67c1d5f9d3d4914bd97030d36266bd7c48662e89 SHA1 fbdebe58a3731ed63f66a691ac13c72c1a23e868 SHA256 d017cd4cf99e6dfd6e79cb38046d942c5e43b4f79e2347b2795ec5fd0aadb62a
+MD5 068be1b5ecc8efbcce76b62f30b56bb0 pan-0.118.ebuild 936
+RMD160 67c1d5f9d3d4914bd97030d36266bd7c48662e89 pan-0.118.ebuild 936
+SHA256 d017cd4cf99e6dfd6e79cb38046d942c5e43b4f79e2347b2795ec5fd0aadb62a pan-0.118.ebuild 936
 EBUILD pan-0.14.2-r1.ebuild 1464 RMD160 2ebf773763b8ecdf5990983c37ad4b3632109b46 SHA1 2374d4c3998814c6e816890d74c60cc96c550662 SHA256 b58be4ddc80e685bfa5a74c1154c606b46a6cca03a0b514c682762ab8d4fb14f
 MD5 c187e5454875f125aae15c7d484cf599 pan-0.14.2-r1.ebuild 1464
 RMD160 2ebf773763b8ecdf5990983c37ad4b3632109b46 pan-0.14.2-r1.ebuild 1464
@@ -37,10 +42,10 @@ EBUILD pan-0.14.2.ebuild 1408 RMD160 86e3777b3a8823ca270b1ea4bb0a95f5d29da368 SH
 MD5 e3716af855784ec0d031f94d1fabbadb pan-0.14.2.ebuild 1408
 RMD160 86e3777b3a8823ca270b1ea4bb0a95f5d29da368 pan-0.14.2.ebuild 1408
 SHA256 89df6ca136c22f69f4dcd24aaf2fb646db8b55f9fc58a031089bb7d83282ee59 pan-0.14.2.ebuild 1408
-MISC ChangeLog 10228 RMD160 2318e2c5d90deb9ab46a44189c8bc9966d5300de SHA1 ee59b955dd79fabd549a7ebb15ee0570c9c9d988 SHA256 c5032043d698f706013800d68c68586023d172c5eb749aedfc5e670d41eeefa1
-MD5 8859a8b2480961ef9a7ea6476c86fa5b ChangeLog 10228
-RMD160 2318e2c5d90deb9ab46a44189c8bc9966d5300de ChangeLog 10228
-SHA256 c5032043d698f706013800d68c68586023d172c5eb749aedfc5e670d41eeefa1 ChangeLog 10228
+MISC ChangeLog 10340 RMD160 0fdc13e5314a58ea598c20e5c51df78fbbbbdec4 SHA1 2efc30cc5937008c652680a167a976558fa69c6b SHA256 88b5258440955520d5dbf71ec160b21b009dbdb1987e55f97e675931e2d35be4
+MD5 6f0f5e5da3a33f383b31ae7874f4a202 ChangeLog 10340
+RMD160 0fdc13e5314a58ea598c20e5c51df78fbbbbdec4 ChangeLog 10340
+SHA256 88b5258440955520d5dbf71ec160b21b009dbdb1987e55f97e675931e2d35be4 ChangeLog 10340
 MISC metadata.xml 180 RMD160 797b69d3fd6f36d441bda500c1310c91837720a4 SHA1 e2e177f18436d4250aadeadfd6ec27639861290e SHA256 1bb112215f4f710d26b79a43b61ec93003963663cfdec7b3b7173cfdbf85f52c
 MD5 b379ecb012e58dcb29c4feee0f5219f2 metadata.xml 180
 RMD160 797b69d3fd6f36d441bda500c1310c91837720a4 metadata.xml 180
@@ -51,6 +56,9 @@ SHA256 408cf274d9849c40757afcdc69ed12ac728cb5878fcaef5fda41baf1ff110681 files/di
 MD5 15c9bd53aea750efb7438658b3488d82 files/digest-pan-0.117 235
 RMD160 7cfb3f69c6e492ff3bbc68613117b2c31e169aa6 files/digest-pan-0.117 235
 SHA256 f901feb7af5e02cc2542fea141770fddcfb9b9889ea2f205e55fbcc86b0bdfe6 files/digest-pan-0.117 235
+MD5 9fa5c391819c7600945b775e3cf85788 files/digest-pan-0.118 235
+RMD160 bdd84c8020b7b77b1d397ab98dd4e8c54da630e2 files/digest-pan-0.118 235
+SHA256 c2e491c7b67bc18da6f5dc74a39ac04272460ef8600db1259e00a64f67e81a2d files/digest-pan-0.118 235
 MD5 72c35710e002d771c38f77fafe79a81e files/digest-pan-0.14.2 238
 RMD160 0692796f69e5d5031dec0c6184cc2f0472ff2ca3 files/digest-pan-0.14.2 238
 SHA256 0d4a0d22cbed45ce133c3985187ad22f4546d158518158b2c1aa9436774752de files/digest-pan-0.14.2 238
@@ -66,7 +74,7 @@ SHA256 fe8c623cf540b747754d6a036dcc2676907148e285b791833c73a891c3a52677 files/di
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.5 (GNU/Linux)
 
-iD8DBQFFO3+BI1lqEGTUzyQRAkF/AJ0fGP/mKDoRnSp+VniVK5/H/ulPmACgxxjb
-XHNVNl7Xrw7J+056Px99Tuc=
-=4f/w
+iD8DBQFFSybSI1lqEGTUzyQRAl+bAKCHjbQ5mFgbDLe1nKHMs+9+iUQ2TgCfRADg
+ivh07fmvL/0szxc8x773io8=
+=8V0m
 -----END PGP SIGNATURE-----
