@@ -1,0 +1,3 @@
+MD5 03c8ed7192d0454684a0c17c6082b92a pan-0.118.tar.bz2 1408563
+RMD160 c4b8d23a84476993c911e7c1ee3376a393bc718b pan-0.118.tar.bz2 1408563
+SHA256 cc37ad98f35ba380c55e36f4e436ec590aee485c3c310898377bef989efd4b12 pan-0.118.tar.bz2 1408563
