@@ -1,6 +1,11 @@
 # ChangeLog for net-nntp/pan
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-nntp/cvs-repo/gentoo-x86/net-nntp/pan/ChangeLog,v 1.27 2006/10/22 14:26:00 swegener Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-nntp/cvs-repo/gentoo-x86/net-nntp/pan/ChangeLog,v 1.28 2006/11/03 11:23:55 swegener Exp $
+
+*pan-0.118 (03 Nov 2006)
+
+  03 Nov 2006; Sven Wegener <swegener@gentoo.org> +pan-0.118.ebuild:
+  Version bump.
 
 *pan-0.117 (22 Oct 2006)
 
